// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`schema version 1 command contracts locks populated deterministic search and context output: populated search v1 1`] = `
{
  "command": "search",
  "data": {
    "candidates": [
      {
        "conversationAlias": "payments",
        "conversationId": "channel-payments",
        "conversationKind": "channel",
        "fusionContributions": [
          {
            "probe": "payment evidence",
            "rank": 1,
            "score": 0.009016393442622951,
            "source": "broad_fts",
            "sourceQuery": "payment evidence",
            "weight": 0.55,
          },
          {
            "probe": "payment evidence",
            "rank": 1,
            "score": 0.01639344262295082,
            "source": "exact_phrase",
            "sourceQuery": "payment evidence",
            "weight": 1,
          },
          {
            "probe": "payment evidence",
            "rank": 1,
            "score": 0.014754098360655738,
            "source": "strict_fts",
            "sourceQuery": "payment evidence",
            "weight": 0.9,
          },
          {
            "probe": "payment evidence",
            "rank": 1,
            "score": 0.012295081967213115,
            "source": "term_fts",
            "sourceQuery": "evidence",
            "weight": 0.75,
          },
        ],
        "fusionScore": 0.05245901639344262,
        "latestActivityAt": 20,
        "link": "https://chat.example.test/_redirect/pl/aaaaaaaaaaaaaaaaaaaaaaaaaa",
        "matches": [
          {
            "bm25": -0.000001,
            "excerpt": "synthetic payment evidence",
            "lexicalEvidence": [
              {
                "bm25": -0.000001,
                "rank": 2,
                "source": "exact_phrase",
                "sourceQuery": "payment evidence",
              },
              {
                "bm25": -0.000002,
                "rank": 2,
                "source": "strict_fts",
                "sourceQuery": "payment evidence",
              },
              {
                "bm25": -0.000001,
                "rank": 2,
                "source": "term_fts",
                "sourceQuery": "evidence",
              },
              {
                "bm25": -0.000001,
                "rank": 2,
                "source": "term_fts",
                "sourceQuery": "payment",
              },
              {
                "bm25": -0.000002,
                "rank": 2,
                "source": "broad_fts",
                "sourceQuery": "payment evidence",
              },
            ],
            "lexicalSource": "exact_phrase",
            "postId": "aaaaaaaaaaaaaaaaaaaaaaaaaa",
            "probe": "payment evidence",
            "sourceQuery": "payment evidence",
            "sourceRank": 2,
          },
          {
            "bm25": -0.000001,
            "excerpt": "payment evidence confirmed",
            "lexicalEvidence": [
              {
                "bm25": -0.000001,
                "rank": 1,
                "source": "exact_phrase",
                "sourceQuery": "payment evidence",
              },
              {
                "bm25": -0.000002,
                "rank": 1,
                "source": "strict_fts",
                "sourceQuery": "payment evidence",
              },
              {
                "bm25": -0.000001,
                "rank": 1,
                "source": "term_fts",
                "sourceQuery": "evidence",
              },
              {
                "bm25": -0.000001,
                "rank": 1,
                "source": "term_fts",
                "sourceQuery": "payment",
              },
              {
                "bm25": -0.000002,
                "rank": 1,
                "source": "broad_fts",
                "sourceQuery": "payment evidence",
              },
            ],
            "lexicalSource": "exact_phrase",
            "postId": "bbbbbbbbbbbbbbbbbbbbbbbbbb",
            "probe": "payment evidence",
            "sourceQuery": "payment evidence",
            "sourceRank": 1,
          },
        ],
        "matchingPostIds": [
          "aaaaaaaaaaaaaaaaaaaaaaaaaa",
          "bbbbbbbbbbbbbbbbbbbbbbbbbb",
        ],
        "priority": 100,
        "rankingEvidence": {
          "distinctProbeCoverage": 1,
          "exactFullyMatchedProbeCount": 1,
          "exactPhraseInReplyCount": 1,
          "exactPhraseInRootCount": 1,
          "exactTermsInSamePost": 2,
          "expandedMatchedTermCount": 0,
          "expansionMatchCount": 0,
          "fallbackMatchedTermCount": 0,
          "fullyMatchedProbeCount": 1,
          "latestRelevantMatchAt": 20,
          "matchedProbeCount": 1,
          "matchedTermCount": 2,
          "matchedTermsAcrossThread": 2,
          "matchedTermsInReplies": 2,
          "matchedTermsInRoot": 2,
          "matchedTermsInSamePost": 2,
          "matchingPostCount": 2,
          "minimumTokenWindow": 2,
          "morphMatchedTermCount": 0,
          "morphTermsInSamePost": 2,
          "proximityKind": "exact_terms_near",
          "subjectInReplies": true,
          "subjectInRoot": true,
          "substantivePostCount": 0,
          "threadDepthScore": 0,
          "threadPostCount": 2,
          "totalProbeCount": 1,
          "totalTermCount": 2,
        },
        "reasons": [
          "subject_in_root",
          "exact_phrase",
          "exact_phrase_in_root",
          "exact_phrase_in_reply",
          "all_terms_in_thread",
          "exact_terms_near",
          "rank_fusion",
          "routing_explicit_channel",
          "conversation_priority",
          "latest_activity",
        ],
        "rootPostId": "aaaaaaaaaaaaaaaaaaaaaaaaaa",
        "scoreVector": [
          0,
          0,
          0,
          0,
          1,
          1,
          2,
          1,
          6,
          511,
          0,
          6,
          0,
          0.05245901639344262,
          2,
          1,
          100,
          20,
          20,
        ],
        "threadId": "aaaaaaaaaaaaaaaaaaaaaaaaaa",
      },
    ],
    "complete": true,
    "filters": {},
    "freshness": [
      {
        "ageSeconds": 0,
        "alias": "payments",
        "conversationId": "channel-payments",
        "coverageComplete": true,
        "kind": "channel",
        "lastSuccessAt": 1000,
        "observedAt": 1000,
        "stale": false,
      },
    ],
    "freshnessMode": "local",
    "probes": [
      {
        "phrases": [],
        "terms": [
          "payment",
          "evidence",
        ],
        "value": "payment evidence",
      },
    ],
    "routing": {
      "canWiden": false,
      "conversations": [
        {
          "alias": "payments",
          "description": "Payments",
          "evidence": [
            {
              "type": "explicit_channel",
              "value": "payments",
            },
          ],
          "id": "channel-payments",
          "kind": "channel",
          "name": "payments",
          "priority": 100,
        },
      ],
      "explicitChannelPolicy": "restrict",
      "reason": "explicit_channels",
      "unmatchedHints": {
        "repositories": [],
        "scopes": [],
      },
    },
    "searchCoverageComplete": true,
    "searchedConversations": [
      {
        "alias": "payments",
        "evidence": [
          {
            "type": "explicit_channel",
            "value": "payments",
          },
        ],
        "id": "channel-payments",
        "kind": "channel",
      },
    ],
    "subject": {
      "kind": "text",
      "raw": "payment evidence",
      "text": "payment evidence",
    },
    "warnings": [],
    "widened": false,
  },
  "schemaVersion": 1,
  "success": true,
  "warnings": [],
}
`;

exports[`schema version 1 command contracts locks populated deterministic search and context output: populated context v1 1`] = `
{
  "command": "context",
  "data": {
    "budget": {
      "limit": 1000,
      "maxThreads": 3,
      "measurement": "unicode_code_points_in_rendered_post",
      "used": 197,
    },
    "complete": true,
    "explicitChannelPolicy": "restrict",
    "filters": {},
    "freshness": [
      {
        "ageSeconds": 0,
        "alias": "payments",
        "conversationId": "channel-payments",
        "coverageComplete": true,
        "kind": "channel",
        "lastSuccessAt": 1000,
        "observedAt": 1000,
        "stale": false,
      },
    ],
    "freshnessMode": "local",
    "probes": [
      {
        "phrases": [],
        "terms": [
          "payment",
          "evidence",
        ],
        "value": "payment evidence",
      },
    ],
    "remoteSearch": {
      "candidateThreads": 0,
      "failures": 0,
      "performed": false,
      "queries": [],
      "reason": null,
      "requested": false,
    },
    "searchCoverageComplete": true,
    "searchedConversations": [
      {
        "alias": "payments",
        "evidence": [
          {
            "type": "explicit_channel",
            "value": "payments",
          },
        ],
        "id": "channel-payments",
        "kind": "channel",
      },
    ],
    "selectedThreadsComplete": true,
    "subject": {
      "kind": "text",
      "raw": "payment evidence",
      "text": "payment evidence",
    },
    "threads": [
      {
        "budget": {
          "limit": 1000,
          "measurement": "unicode_code_points_in_rendered_post",
          "used": 197,
        },
        "conversationAlias": "payments",
        "conversationId": "channel-payments",
        "conversationKind": "channel",
        "latestActivityAt": 20,
        "link": "https://chat.example.test/_redirect/pl/aaaaaaaaaaaaaaaaaaaaaaaaaa",
        "matchingPostIds": [
          "aaaaaaaaaaaaaaaaaaaaaaaaaa",
          "bbbbbbbbbbbbbbbbbbbbbbbbbb",
        ],
        "omittedAttachments": [],
        "omittedPosts": 0,
        "posts": [
          {
            "attachments": [],
            "authorDisplayName": "Alice Example",
            "authorUsername": "alice",
            "createAt": 10,
            "deleteAt": 0,
            "id": "aaaaaaaaaaaaaaaaaaaaaaaaaa",
            "message": "synthetic payment evidence",
            "renderedUnits": 68,
            "rootId": "",
            "updateAt": 1,
            "userId": "user-1",
          },
          {
            "attachments": [
              {
                "deleteAt": 0,
                "extension": "txt",
                "id": "file-1",
                "mimeType": "text/plain",
                "name": "synthetic.txt",
                "postId": "bbbbbbbbbbbbbbbbbbbbbbbbbb",
                "size": 42,
              },
            ],
            "authorDisplayName": "Alice Example",
            "authorUsername": "alice",
            "createAt": 20,
            "deleteAt": 0,
            "id": "bbbbbbbbbbbbbbbbbbbbbbbbbb",
            "message": "payment evidence confirmed",
            "renderedUnits": 129,
            "rootId": "aaaaaaaaaaaaaaaaaaaaaaaaaa",
            "updateAt": 1,
            "userId": "user-1",
          },
        ],
        "reasons": [
          "subject_in_root",
          "exact_phrase",
          "exact_phrase_in_root",
          "exact_phrase_in_reply",
          "all_terms_in_thread",
          "rank_fusion",
          "routing_explicit_channel",
          "conversation_priority",
          "latest_activity",
        ],
        "returnedAttachments": 1,
        "returnedPosts": 2,
        "selectionStrategy": [
          "root",
          "matching_posts",
        ],
        "threadId": "aaaaaaaaaaaaaaaaaaaaaaaaaa",
        "timeline": [
          {
            "kind": "post",
            "post": {
              "attachments": [],
              "authorDisplayName": "Alice Example",
              "authorUsername": "alice",
              "createAt": 10,
              "deleteAt": 0,
              "id": "aaaaaaaaaaaaaaaaaaaaaaaaaa",
              "message": "synthetic payment evidence",
              "renderedUnits": 68,
              "rootId": "",
              "updateAt": 1,
              "userId": "user-1",
            },
          },
          {
            "kind": "post",
            "post": {
              "attachments": [
                {
                  "deleteAt": 0,
                  "extension": "txt",
                  "id": "file-1",
                  "mimeType": "text/plain",
                  "name": "synthetic.txt",
                  "postId": "bbbbbbbbbbbbbbbbbbbbbbbbbb",
                  "size": 42,
                },
              ],
              "authorDisplayName": "Alice Example",
              "authorUsername": "alice",
              "createAt": 20,
              "deleteAt": 0,
              "id": "bbbbbbbbbbbbbbbbbbbbbbbbbb",
              "message": "payment evidence confirmed",
              "renderedUnits": 129,
              "rootId": "aaaaaaaaaaaaaaaaaaaaaaaaaa",
              "updateAt": 1,
              "userId": "user-1",
            },
          },
        ],
        "totalOmittedAttachments": 0,
        "totalPosts": 2,
        "unreportedOmittedAttachments": 0,
      },
    ],
    "unmatchedHints": {
      "repositories": [],
      "scopes": [],
    },
    "warnings": [],
    "widening": {
      "allowed": false,
      "performed": false,
    },
  },
  "schemaVersion": 1,
  "success": true,
  "warnings": [],
}
`;
